--- a/hivemq/charts/hivemq-operator/templates/hivemq-operator/operator-deployment.yaml
+++ b/hivemq/charts/hivemq-operator/templates/hivemq-operator/operator-deployment.yaml
@@ -22,7 +22,15 @@ spec:
       {{- end }}
       {{- with .Values.operator.nodeSelector }}
       nodeSelector:
-      {{ toYaml . | indent 8 }}
+        {{ toYaml .Values.operator.nodeSelector | indent 8 }}
+      {{- end }}
+      {{- if .Values.operator.tolerations }}
+      tolerations:
+        {{ toYaml .Values.operator.tolerations | indent 8 }}
+      {{- end }}
+      {{- if .Values.operator.affinity }}
+      affinity:
+        {{ toYaml .Values.operator.affinity | indent 8 }}
       {{- end }}
       containers:
         - image: {{ .Values.operator.image }}
