--- a/hivemq/charts/hivemq-operator/templates/hivemq-operator/operator-deployment.yaml
+++ b/hivemq/charts/hivemq-operator/templates/hivemq-operator/operator-deployment.yaml
@@ -20,7 +20,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.operator.nodeSelector }}
+      {{- if .Values.operator.nodeSelector }}
       nodeSelector:
         {{ toYaml .Values.operator.nodeSelector | indent 8 }}
       {{- end }}
