change hivemq to git repo

--- a/hivemq/charts/hivemq-operator/operator-tmpls/cluster-daemon-set.yaml
+++ b/hivemq/charts/hivemq-operator/operator-tmpls/cluster-daemon-set.yaml
@@ -48,7 +48,7 @@ spec:
           {{ entry.key }}: "{{entry.value}}"
           {% endfor %}
       {% endif %}
-      {% if spec.tolerations.size() > 0 %}
+      {% if !spec.tolerations.entrySet().isEmpty() %}
       tolerations:
         {{ util:nindent(8, util:toYaml(spec.tolerations)) }}
       {% endif %}
