--- a/hivemq/charts/hivemq-operator/operator-tmpls/cluster-deployment.yaml
+++ b/hivemq/charts/hivemq-operator/operator-tmpls/cluster-deployment.yaml
@@ -57,7 +57,7 @@ spec:
         {{ entry.key }}: "{{entry.value}}"
         {% endfor %}
       {% endif %}
-      {% if !spec.tolerations.entrySet().isEmpty() %}
+      {% if spec.tolerations.size() > 0 %}
       tolerations:
         {{ util:nindent(8, util:toYaml(spec.tolerations)) }}
       {% endif %}
