change hivemq to git repo

--- a/hivemq/charts/hivemq-operator/templates/hivemq-operator/custom-resource.yaml
+++ b/hivemq/charts/hivemq-operator/templates/hivemq-operator/custom-resource.yaml
@@ -82,7 +82,7 @@ spec:
   nodeSelector: {{ toYaml .Values.hivemq.nodeSelector | nindent 4 }}
   {{- end }}
   {{- if .Values.hivemq.tolerations }}
-  tolerations: |{{ toYaml .Values.hivemq.tolerations | indent 4 }}
+  tolerations: |{{ .Values.hivemq.tolerations | indent 4 }}
   {{- end }}
   runtimeClassName: {{ toYaml .Values.hivemq.runtimeClassName | nindent 4 }}
   priorityClassName: {{ toYaml .Values.hivemq.priorityClassName | nindent 4 }}
