--- a/hivemq/charts/hivemq-operator/templates/hivemq-operator/custom-resource.yaml
+++ b/hivemq/charts/hivemq-operator/templates/hivemq-operator/custom-resource.yaml
@@ -81,9 +81,7 @@ spec:
   {{- if .Values.hivemq.nodeSelector }}
   nodeSelector: {{ toYaml .Values.hivemq.nodeSelector | nindent 4 }}
   {{- end }}
-  {{- if .Values.hivemq.tolerations }}
-  tolerations: |{{ .Values.hivemq.tolerations | indent 4 }}
-  {{- end }}
+  tolerations: {{ toYaml .Values.hivemq.tolerations | indent 4 }}
   runtimeClassName: {{ toYaml .Values.hivemq.runtimeClassName | nindent 4 }}
   priorityClassName: {{ toYaml .Values.hivemq.priorityClassName | nindent 4 }}
   additionalVolumes: {{ toYaml .Values.hivemq.additionalVolumes | nindent 4 }}
