--- a/hivemq_helmv2/charts/hivemq-swarm/Chart.yaml
+++ b/hivemq_helmv2/charts/hivemq-swarm/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: hivemq-operator
-description: Operator for the HiveMQ MQTT broker
+name: hivemq-swarm
+description: A Helm chart for HiveMQ Swarm
 type: application
 keywords:
   - MQTT
@@ -10,13 +10,12 @@ keywords:
   - messaging
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.9.3.1
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application.
+version: 0.2.1
+# This is the version number of HiveMQ Swarm. 
 appVersion: 4.7.0
-icon: https://www.hivemq.com/img/svg/hivemq-bee.svg
+icon: https://www.hivemq.com/img/svg/icon-hivemq-swarm.svg
 dependencies:
   - name: kube-prometheus-stack
     repository: https://prometheus-community.github.io/helm-charts
     condition: monitoring.dedicated, monitoring.enabled
-    version: 11.*
+    version: 14.*
